@@ -3,6 +3,8 @@ CHANGES.txt - 11/21/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The scheduler now logs log file open errors to the
+	  system log (STR #1289)
 	- The scheduler now sets the job-originating-user-name to
 	  the authenticated username, if available (STR #1318)
 	- The scheduler now only updates the permissions of SSL
